manifests/hubble.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${HUBBLE_HOST}
    - ${HUBBLE_LOCAL_HOST}
    secretName: hubble-tls
  rules:
  - host: ${HUBBLE_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
  - host: ${HUBBLE_LOCAL_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
